--- a/composer.json
+++ b/composer.json
@@ -15,6 +15,12 @@
         }
     },
     "require-dev": {
-        "laravel/framework": "^5.1"
+        "php": ">=5.5.9"
+    },
+    "require": {
+        "illuminate/support": "^5.1",
+        "illuminate/console": "^5.1",
+        "intervention/image": "^2.3",
+        "league/flysystem-aws-s3-v3": "~1.0"
     }
 }
