--- a/composer.json
+++ b/composer.json
@@ -21,7 +21,8 @@
         "illuminate/support": "^5.1",
         "illuminate/console": "^5.1",
         "intervention/image": "^2.3",
+        "laracasts/flash": "~1.3",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "laracasts/flash": "~1.3"
+        "sofa/eloquence": "~5.1@dev"
     }
 }
