--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require-dev": {
-        "php": ">=5.5.9"
+        "php": ">=5.6.4",
     },
     "require": {
         "illuminate/support": "^5.1",
@@ -23,6 +23,6 @@
         "intervention/image": "^2.3",
         "laracasts/flash": "~1.3",
         "league/flysystem-aws-s3-v3": "~1.0",
-        "sofa/eloquence": "~5.1@dev"
+        "sofa/eloquence": "^5.3"
     }
 }
