--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require-dev": {
-        "php": ">=5.6.4",
+        "php": ">=5.6.4"
     },
     "require": {
         "intervention/image": "^2.3",
