--- a/composer.json
+++ b/composer.json
@@ -20,5 +20,15 @@
     "require": {
         "intervention/image": "^2.3",
         "league/flysystem-aws-s3-v3": "~1.0"
+    },
+    "extra": {
+        "laravel": {
+            "providers": [
+                "Metrique\\Plonk\\PlonkServiceProvider"
+            ],
+            "aliases": {
+                "CDNify": "Metrique\\Plonk\\PlonkFacade"
+            }
+        }
     }
 }
