--- a/composer.json
+++ b/composer.json
@@ -1,12 +1,12 @@
 {
     "name": "metrique/laravel-plonk",
-    "description": "Library for image management in Laravel 5.4",
+    "description": "Library for image management in Laravel 5.",
     "type": "Library",
     "license": "MIT",
     "authors": [
         {
             "name": "Daniel Hudson",
-            "email": "support@shinobicorp.com"
+            "email": "support@metrique.co.uk"
         }
     ],
     "autoload": {
