--- a/composer.json
+++ b/composer.json
@@ -15,11 +15,11 @@
         }
     },
     "require-dev": {
-        "php": ">=5.6.4"
+        "php": "^7.0",
     },
     "require": {
         "intervention/image": "^2.3",
-        "league/flysystem-aws-s3-v3": "~1.0"
+        "laravel/framework": ">=5.5",
     },
     "extra": {
         "laravel": {
