--- a/composer.json
+++ b/composer.json
@@ -15,7 +15,7 @@
         }
     },
     "require-dev": {
-        "php": "^7.0",
+        "php": "^7.0"
     },
     "require": {
         "intervention/image": "^2.3",
