--- a/composer.json
+++ b/composer.json
@@ -19,7 +19,7 @@
     },
     "require": {
         "intervention/image": "^2.3",
-        "laravel/framework": "^5.8|^6.0|^7.0"
+        "laravel/framework": ">=5.8"
     },
     "extra": {
         "laravel": {
